# powerpoint-image-exporter-old

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  conftest.py  main.py  noxfile.py  pptx_image_exporter.py  pyproject.toml
cli/: application.py
data/: random-photo-1597305526414-f2f172412ed1.tiff
pptx_export/: pptx_export.py
src/commandline/: application.py
src/powerpoint_image_exporter/: powerpoint_image_exporter.py
src/pptx_export/: pptx_export.py
src/pptx_image_exporter/: pptx_image_exporter.py
tests/: conftest.py  test_pptx_export.py
tests/integration/: test_full_image_export.py
tests/unit/: test_pptx_export.py
