[tool.poetry]
name = "powerpoint-image-exporter"
version = "0.1.0"
description = "Export images from a pptx file into an empty directory"
authors = ["Tom Kierzkowski <52253+tjkierzkowski@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
importlib-metadata = "^1.7.0"
python-pptx = "^0.6.18"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
safety = "^1.9.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
debug = ["config","sys","premain"]
branch = true
source = ["commandline","pptx_export","pptx_image_exporter"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
